# snlmath

./: README  README.md
src/: CMakeLists.txt
src/simd/: CMakeLists.txt  aosf33.h  aosf44.h  aosq.h  simd.h
src/simd/regular/: aosf44.c  aosq.c
src/simd/sse/: CMakeLists.txt  sse.c  sse.h
src/tests/: CMakeLists.txt  test_simd.c
